# Lumina-T2X

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  README_cn.md  pyproject.toml  requirements.txt
Flag-DiT-ImageNet/: .isort.cfg  README.md  grad_norm.py  parallel.py  train.py
Flag-DiT-ImageNet/exps/: 3B_bs256_lr5e-4_bf16_qknorm_lognorm.sh  600M_bs256_lr5e-4_bf16_qknorm_lognorm.sh  7B_bs256_lr5e-4_bf16_qknorm_lognorm.sh
Flag-DiT-ImageNet/exps/slurm/: 3B_bs256_lr5e-4_bf16_qknorm_lognorm.sh  600M_bs256_lr5e-4_bf16_qknorm_lognorm.sh  7B_bs256_lr5e-4_bf16_qknorm_lognorm.sh
Flag-DiT-ImageNet/models/: __init__.py  model.py
Flag-DiT-ImageNet/scripts/: run_8gpus.sh
Flag-DiT-ImageNet/scripts/slurm/: run_32gpus.sh  run_8gpus.sh
Flag-DiT-ImageNet/transport/: __init__.py  integrators.py  transport.py
Lumina-T2I/: README.md  demo.py  requirements.txt  train.py
Lumina-T2I/data/: dataset.py
Lumina-T2I/models/: model.py
Lumina-T2I/transport/: path.py  transport.py
Next-DiT-ImageNet/: README.md  grad_norm.py  init_loss.py  sample.py  train.py
Next-DiT-ImageNet/exps/slurm/: 2B_bs256_lr5e-4_bf16_qknorm_lognorm.sh  600M_bs256_lr5e-4_bf16_qknorm_lognorm.sh  7B_bs256_lr5e-4_bf16_qknorm_lognorm.sh
Next-DiT-ImageNet/models/: __init__.py  models.py
Next-DiT-ImageNet/scripts/: run_8gpus.sh
Next-DiT-ImageNet/transport/: __init__.py  path.py  transport.py
Next-DiT-MoE/: README.md  sample.py  train.py
Next-DiT-MoE/exps/: 600M_bs256_lr5e-4_bf16_qknorm_lognorm.sh
Next-DiT-MoE/models/: __init__.py  models.py  models1.py  models2.py
lumina_audio/: README.md  demo_audio.py  n2s_openai.py  run_audio.sh  style.css
lumina_audio/configs/: lumina-text2audio.yaml
lumina_audio/models/: autoencoder1d.py  util.py
lumina_audio/models/diffusion/: ddpm.py  (+2 more)
lumina_music/: README.md  demo_music.py  requirements.txt  run_music.sh
lumina_music/configs/: lumina-text2music.yaml
lumina_music/models/: autoencoder1d.py  lr_scheduler.py  util.py
lumina_next_compositional_generation/: README.md  demo.py
lumina_next_compositional_generation/models/: model.py
lumina_next_compositional_generation/transport/: utils.py
lumina_next_editing/: README.md  demo.py
lumina_next_editing/models/: model.py
lumina_next_editing/transport/: integrators.py  path.py  transport.py
lumina_next_t2i/: README.md  __init__.py  demo.py  entry_point.py  grad_norm.py  imgproc.py  parallel.py  sample.py  train.py
lumina_next_t2i/data/: __init__.py  data_reader.py  dataset.py
lumina_next_t2i/models/: __init__.py  model.py
lumina_next_t2i/transport/: __init__.py  integrators.py  path.py  transport.py
lumina_next_t2i/utils/: __init__.py  cli.py  group.py
lumina_next_t2i_mini/: README.md  demo.py  grad_norm.py  parallel.py  sample.py  sample_img2img.py  sample_sd3.py  train.py  train_dreambooth_sd3.py  transport.py
lumina_next_t2i_mini/data/: dataset.py
lumina_next_t2i_mini/models/: __init__.py  nextdit.py
lumina_next_t2i_mini/scripts/: gen.sh  sample.sh  sample_img2img.sh  sample_sd3.sh
lumina_next_t2i_mini/transport/: __init__.py  integrators.py  transport.py
lumina_sd3/: README.md  grad_norm.py  imgproc.py  train_sd3.py
lumina_t2i/: README.md  __init__.py  demo.py  entry_point.py  grad_norm.py  imgproc.py  parallel.py  train.py
lumina_t2i/data/: data_reader.py  dataset.py
lumina_t2i/exps/: 5B_bs512_lr1e-4_bf16_1024px_sdxlvae.sh  5B_bs512_lr1e-4_bf16_256px_sdxlvae.sh  5B_bs512_lr1e-4_bf16_512px_sdxlvae.sh
lumina_t2i/models/: __init__.py  model.py
lumina_t2i/transport/: __init__.py  integrators.py  path.py  transport.py  utils.py
lumina_t2i/utils/: __init__.py  cli.py  group.py
lumina_tensorrt/: README.md  build_engine.sh  export_onnx.py  install.sh
lumina_tensorrt/models/: nextdit.py
visual_anagrams/: LICENSE  MANIFEST.in  animate.py  environment.yml  generate.py  huggingface_login.py  readme.md  run.sh  setup.py
visual_anagrams/models/: __init__.py  nextdit.py
visual_anagrams/visual_anagrams/: animate.py  samplers.py  utils.py
(+48 files in other folders)
